# TileWorldGBA

./: .gitignore  Makefile  README.md  TileWorldClient.py  TileWorldGBA_mb.elf  TileWorldGBA_mb.gba  TileWorld_mb.elf  TileWorld_mb.gba  gbusb.uf2  multiboot.py
Art/: Box art.psd  Boxart.blend  Boxart.blend1  SSG Logo BW.dxf  Web Link Game.psd  sprites.c  sprites.h
Hardware/Adapter/: #auto_saved_files#  Adapter.kicad_pcb  Adapter.kicad_prl  Adapter.kicad_pro  Adapter.kicad_sch  Adapter.mtl  Adapter.net  Adapter.step  Adapter2.net  fp-info-cache
Hardware/Adapter/Gerbers/: Adapter-B_Cu.gbr  Adapter-B_Mask.gbr  Adapter-B_Paste.gbr  Adapter-B_Silkscreen.gbr  Adapter-Edge_Cuts.gbr  Adapter-F_Cu.gbr  Adapter-F_Mask.gbr  Adapter-F_Paste.gbr  Adapter-F_Silkscreen.gbr  Adapter-NPTH.drl  Adapter-PTH.drl  Gerbers.rar
Hardware/Blender stuff/: 3dprinting stoof.blend  3dprinting stoof.blend1  final.stl
Hardware/Other symbols/: SSG Logo.kicad_mod  gameboy_linkport.kicad_sym
Hardware/picofootprint/RP_Silicon_KiCad-main/KiCadLibraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
Pico/: wifi.txt
Pico Firmware/: CMakeLists.txt  README.md  lwipopts.h  lwipopts_examples_common.h  main.c  mbedtls_config.h  multiboot.c  multiboot.h  picow_tcp_client.c  picow_tls_client.c  sio.c  sio.h  ws.c  ws.h  wss_client.c
Pico/Pico Firmware/: CMakeLists.txt  configurer.c  configurer.h  lwipopts.h  main.c  multiboot.h  sio.c  ws.c
Pico/configTest/: CMakeLists.txt  main.c  msc_disk.c
Pico/configTest2/: .gitignore  CMakeLists.txt  main.c  main.h  msc_disk.c  picow_tcp_client.c  usb_descriptors.c
Pico/picotooltests/blink/: CMakeLists.txt  blink.c
Pico/picotooltests/uf2editor/: main.py  pico.uf2  pico2.uf2
Python/: README.md  TileWorldClient.py  multiboot.py
source/: Colly.c  Colly.h  Legacy sio.txt  TileMap.c  TileMap.h  bug notes.txt  colly.cpp  docs.md  howMapIsStored.md  main.c  main.h  map.c  map.h  memmap.h  players.c  players.h  playersprite.c  playersprite.h  sio.c  sio.h  toolbox.h  util.c  util.h
